--- a/samples/Dynamics-Fraud-Protection/ui-templates/css/exception.css
+++ b/samples/Dynamics-Fraud-Protection/ui-templates/css/exception.css
@@ -1,74 +1,98 @@
-.error-page-help,.error-page-messagedetails,body{
-    font-family: wf_segoe-ui_normal,"Segoe UI","Segoe WP",Tahoma,Arial,sans-serif;
+.error-page-help,
+.error-page-messagedetails,
+body {
+    font-family: wf_segoe-ui_normal, "Segoe UI", "Segoe WP", Tahoma, Arial, sans-serif;
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
     font-weight: 400;
 }
-a,h2{
+
+a,
+h2 {
     font-weight: 700;
 }
-img{
+
+img {
     border: 0;
     height: 70px;
 }
-h2{
+
+h2 {
     font-size: 1.1em;
     padding-bottom: 3px;
     text-align: justify;
 }
-a{
+
+a {
     text-decoration: none;
-    color:#696969;
+    color: #696969;
 }
-a:visited{
+
+a:visited {
     font-weight: 400;
 }
-a:hover{
+
+a:hover {
     text-decoration: underline;
 }
-.error-page{
+
+.error-page {
     margin: 110px 0 0 80px;
     position: relative;
 }
-.error-page-content{
+
+.error-page-content {
     top: 110px;
     width: 400px;
     color: #000;
 }
-#api{
+
+#api {
     height: 100%;
 }
-.error-page-image{
+
+.error-page-image {
     position: absolute;
     top: 0;
     left: 320px;
 }
-.error-page-help{
+
+.error-page-help {
     font-weight: 400;
     font-size: 16px;
     margin-bottom: 50px;
     text-align: justify;
 }
-.error-page-messagedetails{
+
+.error-page-messagedetails {
     font-weight: 300;
     font-size: 12px;
     margin-bottom: 21px;
     text-align: justify;
 }
-.error-body{
+
+.error-body {
     position: absolute;
     top: 750px;
     left: 16px;
     right: 16px;
 }
-.api_container div{
+
+.api_container div {
     padding-bottom: 0;
 }
+
 .col-lg-6 {
     height: 100%;
 }
-.panel, .panel_layout, .panel_layout_row, body, html {
+
+.panel,
+.panel_layout,
+.panel_layout_row,
+body,
+html {
     margin: auto;
 }
